--- a/views/topnav.html
+++ b/views/topnav.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/register">Register</a></li>
+        <li id="home"><a href="/">Home</a></li>
+        <li id="login"><a href="/login">Login</a></li>
+        <li id="register"><a href="/register">Register</a></li>
     </ul>
 </nav>
