--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,9 @@ input,
 button {
     transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
-
+h1, p{
+    color: rgb(255, 255, 255);
+}
 /* Estilo para mensajes de respuesta */
 #responseMessage.success {
     background-color: #d1fae5;
