--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="{{ url_for('static', path='css/styles.css') }}">
 </head>
 
-<body data-theme="system" class="bg-gray-100 dark:bg-gray-900 min-h-screen transition-colors duration-300">
+<body class="bg-gray-100 dark:bg-gray-900 min-h-screen">
   {% include 'topnav.html' %}
   <div class="main-content">
     <h1 class="text-3xl font-bold text-center mt-4">Bienvenido a Nexio</h1>
