--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nexio</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="{{ url_for('static', path='css/styles.css') }}">
 </head>
 
-<body class="bg-gray-100 dark:bg-gray-900 min-h-screen">
+<body>
   {% include 'topnav.html' %}
-  <div class="main-content">
-    <h1 class="text-3xl font-bold text-center mt-4">Bienvenido a Nexio</h1>
-    <p class="text-center mt-2">Este es el contenido de la página principal.</p>
+  <div class="main-container">
+    <button id="submitPost">Add Post</button>
   </div>
   <script src="{{ url_for('static', path='/js/home.js') }}"></script>
 </body>
